# LLaVA

./: .gitignore  HANDOFF.md  HANDOFFJ.md  README.md  READMEJ.md  TECHNICAL.md  TECHNICALJ.md  config.yaml  pyproject.toml  start_all.sh  stop_all.sh
docs/: LLaVA設計図.pptx
scripts/: benchmark_concurrent.py  benchmark_vlm.py  benchmark_yolo.py  export_yolo_onnx.py  list_cameras.py  shm_reader_demo.py
src/capture/: __init__.py  capture_session.py  device_manager.py  format_negotiator.py  frame_normalizer.py  hotplug_watcher.py  main.py  shm_writer.py
src/inference/: __init__.py  vlm_worker.py  yolo_worker.py
src/server/: app.py  vlm_runner.py  webrtc_track.py  ws_broadcaster.py  yolo_runner.py
src/web/: caption.js  index.html  overlay.js
tests/: test_device_selection.py
