[project]
name = "webcam-vlm-yolo"
version = "0.0.1"
description = "USB camera -> VLM/YOLO -> Chrome WebRTC demo on NucBox EVO X2 (ROCm)"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pyyaml>=6.0",
    "pyudev>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Install torch FIRST with the ROCm index, then `uv pip install -e .[yolo]`.
# Otherwise ultralytics will pull torch from PyPI (CUDA build) which is wrong.
yolo = [
    "ultralytics>=8.3.0",
]
onnx = [
    "onnx>=1.17",
    "onnxruntime>=1.20",
]
webrtc = [
    "aiortc>=1.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "requests>=2.31",     # VlmServerWorker -> llama-server /v1/chat/completions
]

[project.scripts]
list-cameras = "scripts.list_cameras:main"
capture-run = "src.capture.main:main"
shm-reader-demo = "scripts.shm_reader_demo:main"
benchmark-yolo = "scripts.benchmark_yolo:main"
export-yolo-onnx = "scripts.export_yolo_onnx:main"
benchmark-vlm = "scripts.benchmark_vlm:main"
benchmark-concurrent = "scripts.benchmark_concurrent:main"
serve = "src.server.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
